--- a/wp-content/themes/mytheme/assets/scss/custom.scss
+++ b/wp-content/themes/mytheme/assets/scss/custom.scss
@@ -1,1 +1,62 @@
-\
+.banner{
+  &__home{
+    position: relative;
+    &--content{
+      padding: 0 10%;
+      z-index: 2;
+      position: absolute;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      top: calc(100% / 2 - 50%/2 + 4vh);
+      left: auto;
+      right: auto;
+    }
+  }
+}
+.mySwiper {
+  height: 100vh;
+  .swiper-button-hide{
+    display:none !important;
+  }
+  .swiper-slide{
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  .swiper-pagination{
+    position: unset !important;
+    text-align: left;
+    //bottom: var(--swiper-pagination-bottom,38rem) !important;
+    .swiper-pagination-bullet {
+      width: 0.8rem;
+      height: 0.8rem;
+      margin-right: 6px;
+      border: 1px solid #fafafa;
+      border-radius: 0;
+      background: transparent;
+      opacity: 1;
+      @media (max-width: 992px) {
+        width: 0.6rem;
+        height: 0.6rem;
+
+      }
+    }
+    .swiper-pagination-bullet-active {
+      background: #fafafa;
+    }
+  }
+}
+.home-intro__thumb{
+      .swiper-wrapper{
+        //img{
+        //  width: 100%;
+        //  height: 100%;
+        //  object-fit: cover;
+        //}
+
+      }
+}
