--- a/wp-content/themes/mytheme/assets/scss/index.scss
+++ b/wp-content/themes/mytheme/assets/scss/index.scss
@@ -121,6 +121,12 @@ address {
 ul,
 ol {
   list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+figure{
+  margin: 0;
 }
 
 img,
@@ -180,6 +186,7 @@ select::-ms-expand {
 :focus:not(.focus-visible) {
   outline: 0;
 }
+
 
 /* ===============================
 
@@ -2097,7 +2104,7 @@ body[data-status="loaded"] .js-loading {
 .home-grid-picture__item {
   z-index: 0;
   display: -ms-grid;
-  display: grid;
+  display: grid !important;
   -ms-grid-columns: 1fr 1.6rem 1fr 1.6rem 1fr;
   grid-template-columns: 1fr 1.6rem 1fr 1.6rem 1fr;
   -ms-grid-rows: 1fr 1.6rem 1fr 1.6rem 1fr;
@@ -2368,7 +2375,7 @@ body[data-status="loaded"] .js-loading {
 
 @media screen and (min-width: 992px) {
   .home-kv__paragraph {
-    font-size: 2.4rem;
+    font-size: 1.8rem;
   }
 }
 
@@ -7050,3 +7057,4 @@ button.swiper-pagination-bullet {
     max-width: 155px;
   }
 }
+@import "custom.scss";
