--- a/wp-content/themes/mytheme/assets/scss/index.scss
+++ b/wp-content/themes/mytheme/assets/scss/index.scss
@@ -1,306 +1,6 @@
-@charset "UTF-8";
-
-
-//@custom-media --sm screen and (min-width: 544px);
-//@custom-media --md screen and (min-width: 768px);
-//@custom-media --lg screen and (min-width: 992px);
-//@custom-media --xl screen and (min-width: 1200px);
-/*
-@mixin is-lg-small() {
-  @media screen and (max-width: $breakpoint-tablet) {
-    @content;
-  }
-}
-*/
-/* IEハック用mixin */
-/* ===============================
-
-	FOUNDATION
-
-================================ */
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-::-moz-selection {
-  background: #e7e7e7;
-}
-
-::selection {
-  background: #e7e7e7;
-}
-
-html {
-  width: 100%;
-  height: 100%;
-  font-size: 62.5%;
-  line-height: 1.15;
-  -ms-overflow-style: scrollbar;
-  -webkit-tap-highlight-color: transparent;
-  -webkit-text-size-adjust: 100%;
-}
-
-body {
-  overflow-x: hidden;
-  overflow-y: scroll;
-  width: 100%;
-  height: 100%;
-  background: #fafafa;
-  font: normal normal normal 1.2rem/1 "游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", sans-serif;
-  color: #050505;
-  letter-spacing: 0;
-  word-break: break-all;
-  -ms-content-zooming: none;
-  -webkit-font-smoothing: antialiased;
-  -webkit-overflow-scrolling: touch;
-  -webkit-writing-mode: horizontal-tb;
-  -ms-writing-mode: lr-tb;
-  writing-mode: horizontal-tb;
-}
-
-@media screen and (min-width: 768px) {
-  body {
-    font-size: 1.5rem;
-  }
-}
-
-body[data-bodyfixed='true'] {
-  position: relative;
-  left: 0;
-}
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-main,
-menu,
-nav,
-section,
-summary {
-  display: block;
-}
-
-audio,
-canvas,
-progress,
-video,
-img {
-  display: inline-block;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font: inherit;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-small {
-  font-size: inherit;
-}
-
-address {
-  font: inherit;
-}
-
-ul,
-ol {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-figure{
-  margin: 0;
-}
-
-img,
-picture,
-video {
-  max-width: 100%;
-  height: auto;
-}
-
-img {
-  border-style: none;
-  vertical-align: middle;
-}
-
-table {
-  border-spacing: 0;
-  border-collapse: collapse;
-}
-
-input,
-button,
-select,
-textarea {
-  border: none;
-  border-radius: 0;
-  background: transparent;
-  font: inherit;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-
-textarea {
-  overflow-y: auto;
-  resize: vertical;
-}
-
-[type='submit'],
-[type='button'],
-button,
-select {
-  cursor: pointer;
-}
-
-select::-ms-expand {
-  display: none;
-}
-
-[hidden] {
-  display: none;
-}
-
-[disabled] {
-  cursor: not-allowed;
-}
-
-:focus:not(.focus-visible) {
-  outline: 0;
-}
-
-
-/* ===============================
-
-	LAYOUT
-
-================================ */
-.l-footer {
-  padding: 3.2rem 10% 60px;
-  background: #c9e7cd;
-  color: #000000;
-}
-
-@media screen and (min-width: 768px) {
-  .l-footer {
-    padding: 5.6rem 10%;
-  }
-}
-
-@media screen and (min-width: 992px) {
-  .l-footer {
-    padding: 6.4rem 5% 5.6rem;
-  }
-}
-
-.l-footer .c-logo {
-  width: 100%;
-  max-width: 100px;
-}
-
-@media screen and (min-width: 992px) {
-  .l-footer .c-logo {
-    max-width: 151.5px;
-    -webkit-transition: .3s;
-    transition: .3s;
-  }
-  .l-footer .c-logo:hover {
-    opacity: .8;
-  }
-}
-
-.l-footer__main {
-  -webkit-box-align: end;
-  align-items: flex-end;
-}
-
-@media screen and (min-width: 992px) {
-  .l-footer__main {
-    display: -webkit-box;
-    display: flex;
-  }
-}
-
-.l-footer__bnr {
-  max-width: 200px;
-  margin: auto;
-  padding-top: 40px;
-}
-
-.l-footer__side {
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-align: center;
-  align-items: center;
-  flex-wrap: wrap;
-  -webkit-box-pack: justify;
-  justify-content: space-between;
-}
-
-.l-footer__main + .l-footer__side {
-  margin-top: 4.8rem;
-}
-
-@media screen and (min-width: 992px) {
-  .l-footer__side {
-    -webkit-box-pack: justify;
-    justify-content: space-between;
-  }
-  .l-footer__main + .l-footer__side {
-    margin-top: 6.4rem;
-  }
-}
-
-.l-footer__address {
-  max-width: 64rem;
-  flex-basis: 30%;
-}
-
-.l-footer__nav {
-  max-width: 96rem;
-  margin-top: 2.4rem;
-}
-
-@media screen and (min-width: 992px) {
-  .l-footer__nav {
-    flex-basis: 50%;
-  }
-  .l-footer__address + .l-footer__nav {
-    margin: 0 0 0 4.8rem;
-  }
-}
-
-.l-footer__sns {
-  padding-right: 8rem;
-}
-
-.l-footer__copy {
-  padding: 2rem 0 0;
-}
-
-@media screen and (min-width: 992px) {
-  .l-footer__sns + .l-footer__copy {
-    padding: 2rem 0;
-  }
-}
+@import "reset.scss";
+@import "footer.scss";
+@import "header.scss";
 
 .p-pagetop {
   position: fixed;
@@ -371,150 +71,6 @@ select::-ms-expand {
   transform: rotate(45deg);
 }
 
-.l-header {
-  position: fixed;
-  z-index: 100;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 6rem;
-  -webkit-transition: .3s;
-  transition: .3s;
-}
-
-@media screen and (min-width: 992px) {
-  .l-header {
-    height: 10.4rem;
-  }
-}
-
-.l-header.is-fixed {
-  background: rgba(255, 255, 255, 0.8);
-}
-
-.l-header__body {
-  position: relative;
-  z-index: 999;
-  display: -webkit-box;
-  display: flex;
-  height: 6rem;
-  padding: 0 5%;
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-box-pack: justify;
-  justify-content: space-between;
-}
-
-@media screen and (min-width: 992px) {
-  .l-header__body {
-    height: 10.4rem;
-  }
-}
-@media screen and (max-width: 991px) {
-  .l-header__body {
-    padding-right: 0;
-  }
-}
-
-.l-header__nav,
-.l-header__sns {
-  display: none;
-}
-
-@media screen and (min-width: 992px) {
-  .l-header__nav,
-  .l-header__sns {
-    display: block;
-  }
-}
-
-.l-header__button {
-  height: 100%;
-}
-
-@media screen and (min-width: 992px) {
-  .l-header__button {
-    display: none;
-  }
-}
-
-.l-header__contact {
-  height: 100%;
-  margin-left: auto;
-}
-
-@media screen and (min-width: 992px) {
-  .l-header__contact {
-    display: none;
-  }
-}
-
-.l-header__tel {
-  height: 100%;
-  margin-left: auto;
-}
-
-.l-header__contact + .l-header__tel {
-  margin-left: 0;
-}
-
-@media screen and (min-width: 992px) {
-  .l-header__tel {
-    display: none;
-  }
-}
-
-.l-home__section + .l-home__section {
-  margin-top: 5.4rem;
-}
-
-@media screen and (min-width: 768px) {
-  .l-home__section + .l-home__section {
-    margin-top: 8.8rem;
-  }
-}
-
-@media screen and (min-width: 992px) {
-  .l-home__section + .l-home__section {
-    margin-top: 14.4rem;
-  }
-}
-
-.l-main {
-  overflow: hidden;
-}
-
-.l-subpage__header {
-  display: -webkit-box;
-  display: flex;
-  /* IE11 Bug Fix */
-}
-
-.l-subpage__nav {
-  position: relative;
-}
-
-.l-subpage__section {
-  position: relative;
-}
-
-.l-subpage__nav + .l-subpage__section {
-  margin-top: -91px;
-  padding-top: 11.2rem;
-}
-
-.l-subpage__section.-background-base-color {
-  background-color: #ecf7ee;
-}
-
-.l-subpage__section.-background-base-color .sub-section {
-  padding-bottom: 60px;
-}
-
-.l-subpage__section.-background-theme-color {
-  background-color: #c9e7cd;
-  color: #fafafa;
-}
 
 /* ===============================
 
