--- a/wp-content/themes/mytheme/assets/css/index.css
+++ b/wp-content/themes/mytheme/assets/css/index.css
@@ -180,17 +180,11 @@ select::-ms-expand {
   outline: 0;
 }
 
-/* ===============================
-
-	LAYOUT
-
-================================ */
 .l-footer {
   padding: 3.2rem 10% 60px;
   background: #c9e7cd;
   color: #000000;
 }
-
 @media screen and (min-width: 768px) {
   .l-footer {
     padding: 5.6rem 10%;
@@ -205,7 +199,6 @@ select::-ms-expand {
   width: 100%;
   max-width: 100px;
 }
-
 @media screen and (min-width: 992px) {
   .l-footer .c-logo {
     max-width: 151.5px;
@@ -220,7 +213,6 @@ select::-ms-expand {
   -webkit-box-align: end;
   align-items: flex-end;
 }
-
 @media screen and (min-width: 992px) {
   .l-footer__main {
     display: -webkit-box;
@@ -232,7 +224,6 @@ select::-ms-expand {
   margin: auto;
   padding-top: 40px;
 }
-
 .l-footer__side {
   display: -webkit-box;
   display: flex;
@@ -242,7 +233,6 @@ select::-ms-expand {
   -webkit-box-pack: justify;
   justify-content: space-between;
 }
-
 .l-footer__main + .l-footer__side {
   margin-top: 4.8rem;
 }
@@ -287,6 +277,125 @@ select::-ms-expand {
     padding: 2rem 0;
   }
 }
+.l-header {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6rem;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+@media screen and (min-width: 992px) {
+  .l-header {
+    height: 10.4rem;
+  }
+}
+.l-header.is-fixed {
+  background: rgba(255, 255, 255, 0.8);
+}
+.l-header__body {
+  position: relative;
+  z-index: 999;
+  display: -webkit-box;
+  display: flex;
+  height: 6rem;
+  padding: 0 5%;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+}
+@media screen and (min-width: 992px) {
+  .l-header__body {
+    height: 10.4rem;
+  }
+}
+@media screen and (max-width: 991px) {
+  .l-header__body {
+    padding-right: 0;
+  }
+}
+.l-header__nav, .l-header__sns {
+  display: none;
+}
+@media screen and (min-width: 992px) {
+  .l-header__nav, .l-header__sns {
+    display: block;
+  }
+}
+.l-header__button {
+  height: 100%;
+}
+@media screen and (min-width: 992px) {
+  .l-header__button {
+    display: none;
+  }
+}
+.l-header__contact {
+  height: 100%;
+  margin-left: auto;
+}
+@media screen and (min-width: 992px) {
+  .l-header__contact {
+    display: none;
+  }
+}
+.l-header__tel {
+  height: 100%;
+  margin-left: auto;
+}
+@media screen and (min-width: 992px) {
+  .l-header__tel {
+    display: none;
+  }
+}
+.l-header__contact + __tel {
+  margin-left: 0;
+}
+.l-home__section + .l-home__section {
+  margin-top: 5.4rem;
+}
+@media screen and (min-width: 768px) {
+  .l-home__section + .l-home__section {
+    margin-top: 8.8rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .l-home__section + .l-home__section {
+    margin-top: 14.4rem;
+  }
+}
+.l-main {
+  overflow: hidden;
+}
+.l-subpage__header {
+  display: -webkit-box;
+  display: flex;
+  /* IE11 Bug Fix */
+}
+.l-subpage__nav {
+  position: relative;
+}
+.l-subpage__section {
+  position: relative;
+}
+.l-subpage__section.-background-base-color {
+  background-color: #ecf7ee;
+}
+.l-subpage__section.-background-base-color .sub-section {
+  padding-bottom: 60px;
+}
+.l-subpage__section.-background-theme-color {
+  background-color: #c9e7cd;
+  color: #fafafa;
+}
+.l-subpage__nav + .l-subpage__section {
+  margin-top: -91px;
+  padding-top: 11.2rem;
+}
+
 .p-pagetop {
   position: fixed;
   z-index: 9999;
@@ -351,143 +460,6 @@ select::-ms-expand {
   content: "";
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
-}
-
-.l-header {
-  position: fixed;
-  z-index: 100;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 6rem;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-@media screen and (min-width: 992px) {
-  .l-header {
-    height: 10.4rem;
-  }
-}
-.l-header.is-fixed {
-  background: rgba(255, 255, 255, 0.8);
-}
-
-.l-header__body {
-  position: relative;
-  z-index: 999;
-  display: -webkit-box;
-  display: flex;
-  height: 6rem;
-  padding: 0 5%;
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-box-pack: justify;
-  justify-content: space-between;
-}
-
-@media screen and (min-width: 992px) {
-  .l-header__body {
-    height: 10.4rem;
-  }
-}
-@media screen and (max-width: 991px) {
-  .l-header__body {
-    padding-right: 0;
-  }
-}
-.l-header__nav,
-.l-header__sns {
-  display: none;
-}
-
-@media screen and (min-width: 992px) {
-  .l-header__nav,
-  .l-header__sns {
-    display: block;
-  }
-}
-.l-header__button {
-  height: 100%;
-}
-
-@media screen and (min-width: 992px) {
-  .l-header__button {
-    display: none;
-  }
-}
-.l-header__contact {
-  height: 100%;
-  margin-left: auto;
-}
-
-@media screen and (min-width: 992px) {
-  .l-header__contact {
-    display: none;
-  }
-}
-.l-header__tel {
-  height: 100%;
-  margin-left: auto;
-}
-
-.l-header__contact + .l-header__tel {
-  margin-left: 0;
-}
-
-@media screen and (min-width: 992px) {
-  .l-header__tel {
-    display: none;
-  }
-}
-.l-home__section + .l-home__section {
-  margin-top: 5.4rem;
-}
-
-@media screen and (min-width: 768px) {
-  .l-home__section + .l-home__section {
-    margin-top: 8.8rem;
-  }
-}
-@media screen and (min-width: 992px) {
-  .l-home__section + .l-home__section {
-    margin-top: 14.4rem;
-  }
-}
-.l-main {
-  overflow: hidden;
-}
-
-.l-subpage__header {
-  display: -webkit-box;
-  display: flex;
-  /* IE11 Bug Fix */
-}
-
-.l-subpage__nav {
-  position: relative;
-}
-
-.l-subpage__section {
-  position: relative;
-}
-
-.l-subpage__nav + .l-subpage__section {
-  margin-top: -91px;
-  padding-top: 11.2rem;
-}
-
-.l-subpage__section.-background-base-color {
-  background-color: #ecf7ee;
-}
-
-.l-subpage__section.-background-base-color .sub-section {
-  padding-bottom: 60px;
-}
-
-.l-subpage__section.-background-theme-color {
-  background-color: #c9e7cd;
-  color: #fafafa;
 }
 
 /* ===============================
@@ -6777,6 +6749,28 @@ button.swiper-pagination-bullet {
     max-width: 155px;
   }
 }
+.img-cover {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
+.justify-content-space-between {
+  justify-content: space-between;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
 .banner__home {
   position: relative;
 }
@@ -6825,6 +6819,15 @@ button.swiper-pagination-bullet {
 }
 .mySwiper .swiper-pagination .swiper-pagination-bullet-active {
   background: #fafafa;
+}
+
+.about-header {
+  padding: 14rem 10% 6rem;
+}
+@media (max-width: 1024px) {
+  .about-header__vertical-text {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
