--- a/wp-content/themes/mytheme/assets/scss/custom.scss
+++ b/wp-content/themes/mytheme/assets/scss/custom.scss
@@ -1,3 +1,21 @@
+.img-cover {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.d-flex{
+  display: flex;
+}
+.justify-content-center{
+  justify-content: center;
+}
+.justify-content-space-between{
+  justify-content: space-between;
+}
+.align-items-center{
+  align-items: center;
+}
+
 .banner{
   &__home{
     position: relative;
@@ -50,13 +68,13 @@
     }
   }
 }
-.home-intro__thumb{
-      .swiper-wrapper{
-        //img{
-        //  width: 100%;
-        //  height: 100%;
-        //  object-fit: cover;
-        //}
-
+.about{
+  &-header{
+    padding: 14rem 10% 6rem;
+    &__vertical-text{
+      @media (max-width: 1024px) {
+        display: none;
       }
+    }
+  }
 }
