--- a/wp-content/themes/mytheme/assets/css/index.css
+++ b/wp-content/themes/mytheme/assets/css/index.css
@@ -180,6 +180,42 @@ select::-ms-expand {
   outline: 0;
 }
 
+.text-color-1 {
+  color: #050505;
+}
+
+.text-color-2 {
+  color: #DDEDDF;
+}
+
+.text-color-3 {
+  color: #FAFAFA;
+}
+
+.text-color-4 {
+  color: #ECF7EE;
+}
+
+.bg-color-1 {
+  background: #050505;
+}
+
+.bg-color-2 {
+  background: #DDEDDF;
+}
+
+.bg-color-3 {
+  background: #FAFAFA;
+}
+
+.bg-color-4 {
+  background: #ECF7EE;
+}
+
+.hideAction {
+  display: none;
+}
+
 .l-footer {
   padding: 3.2rem 10% 60px;
   background: #c9e7cd;
@@ -3337,7 +3373,7 @@ body[data-status=loaded] .js-loading {
 .p-post .wp-block-categories a:not([class]),
 .p-post .wp-block-latest-posts a:not([class]),
 .p-post .wp-block-rss__item a:not([class]) {
-  color: #ddeddf;
+  color: #DDEDDF;
 }
 
 .p-post .addtoany_shortcode {
@@ -5378,7 +5414,7 @@ body[data-menu=active] .header-sp-nav {
   left: 0;
   width: 90%;
   padding: 8rem 10%;
-  background-color: #ddeddf;
+  background-color: #DDEDDF;
   color: #000000;
 }
 
@@ -5504,7 +5540,7 @@ body[data-menu=active] .header-sp-nav {
   display: inline-block;
   width: 100%;
   height: 60%;
-  background-color: #ddeddf;
+  background-color: #DDEDDF;
   content: "";
 }
 
@@ -6828,6 +6864,46 @@ button.swiper-pagination-bullet {
   .about-header__vertical-text {
     display: none;
   }
+}
+
+.section__about--1 {
+  background-size: cover;
+  background-position: 50% 100%;
+  background-color: #c9e7cd;
+  color: #fafafa;
+  margin-top: -91px;
+  padding-top: 11.2rem;
+  position: relative;
+}
+.section__about--contents {
+  padding: 10.4rem 10%;
+}
+.section__about--detail {
+  margin-top: 4.8rem;
+}
+.section__about--2 .section__about--contents {
+  position: relative;
+}
+
+.card__box {
+  margin: 0 -15%;
+}
+.card__box--left {
+  flex-basis: 30%;
+}
+@media (max-width: 1024px) {
+  .card__box {
+    flex-direction: column;
+  }
+  .card__box--left {
+    max-width: 600px;
+    margin: auto;
+    padding: 0 10% 5%;
+  }
+}
+
+.c-breadcrumbs-link {
+  text-transform: uppercase;
 }
 
 /*# sourceMappingURL=index.css.map */
